examples/tests/semantic/fail/subscriptAccess.tig
let 
    type array_type = array of int
    var array_test := array_type [1] of 1
in 
    array_test[1] := 2;
    array_test["taylor"]
end 